--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.leaflet-container {
+  margin-top: 0px;
+  width: 100%;
+  height: 90vh;
+}
+.loading {
+  z-index: 1000;
+  background-color: #c0c0c0;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  padding: 10px;
+  border-radius: 10px;
 }
