--- a/src/App.css
+++ b/src/App.css
@@ -34,13 +34,7 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background: radial-gradient(
-    ellipse at left bottom,
-    rgba(22, 24, 47, 1) 0%,
-    rgba(38, 20, 72, 0.9) 59%,
-    rgba(17, 27, 75, 0.9) 100%
-  );
-  box-shadow: 0 50px 70px -20px rgba(0, 0, 0, 0.8);
+  background: black;
 }
 
 .login .loginContainer label {
@@ -97,7 +91,7 @@ button {
 }
 
 .hero nav {
-  background: #603bbb;
+  background: black;
   width: 100%;
   padding: 20px 40px;
   display: flex;
@@ -111,6 +105,18 @@ button {
 
 .hero nav button {
   width: 86px;
+  color: black;
   padding: 8px 0;
-  background: #3a2b58;
+  background: white;
+}
+
+.hero nav button:hover {
+  background-color: purple;
+}
+
+h1 {
+  font-size: 40px;
+  text-align: center;
+  color: white;
+  padding-bottom: 20px;
 }
